# turbines

./: README.md  databricks.yml  pyproject.toml
resources/: turbines.job.yml  turbines.pipeline.yml
src/turbines/dlt/: turbines_dlt_pipeline.ipynb
src/turbines/dq/: expectations.py
src/turbines/tasks/: refresh_dq_rules.ipynb
src/turbines/transformations/: bronze.py  gold.py  silver.py
tests/dq/: expectations_test.py
tests/transformations/: gold_test.py  silver_test.py
