[project]
name = "turbines"
version = "0.1.0"
description = "Databricks asset bundle for a pipeline to ingest tubrine telemetry, clean and summarize it"
authors = [
    {name = "Michal Klaczynski"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-sdk (>=0.43.0,<0.44.0)",
    "pyspark (==3.5.1)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pandas = "^2.2.3"
setuptools = "^75.8.0"
numpy = "1.26.3"
pyarrow = "^19.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

